<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="10dp">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:src="@drawable/ic_check"
        android:id="@+id/check"
        android:contentDescription="@string/check" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/create_list_view"
        android:textSize="20sp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:layout_weight="2"
        android:id="@+id/task_name"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:src="@drawable/ic_star"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp"
        android:id="@+id/star"
        android:contentDescription="@string/star" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:src="@drawable/ic_dustbin"
        android:id="@+id/task_dust_bin"
        android:contentDescription="@string/dustbin" />
</LinearLayout>